src/test/compile-fail/minus-string.rs
// error-pattern:applying unary minus to non-numeric type istr

fn main() { -"foo"; }
